# cpp_extended

./: .gitignore  CMakeLists.txt  main.cpp  utils.hpp
algo/: CMakeLists.txt  algo.h  algo.hpp  graph.cpp  graph.h  graph.hpp  integral.cpp  integral.h  integral.hpp  matrix_utils.cpp  matrix_utils.hpp  utils.h
algo/graph/: graph.cpp  graph.h  graph.hpp
algo/math/: integral.cpp  integral.h
algo/matrix/: matrix_utils.cpp  matrix_utils.h  matrix_utils.hpp
tests/: CMakeLists.txt  graph_test.cpp  integral_test.cpp  matrix_test.cpp
